# metris

./: CMakeLists.txt
.cache/clangd/index/: core.h.7ADE0E594ABC9226.idx  logging.h.A8B5A13879F6E0D3.idx  main.cc.40ED3433A6ED6CA5.idx  main.cc.FA76BDEC2953BE38.idx  result.h.B44127D963224D8F.idx
src/: core.h  logging.h  main.cc  result.h
